--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+#wrapper{
+    max-width: 200px;
+    margin:0 auto;
+}
+
 #boxWrapper {
-    width: 100vw;
+    line-height: 0;
 }
 
 .boxStyling {
     display: inline-block;
-    width: 50%;
+    width: 100px;
     height: 100px;
 }
