--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,13 @@
     width: 100px;
     height: 100px;
 }
+
+canvas {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -100;
+}
